; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-ppoutput.c_maybe_print_line.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-ppoutput.c_maybe_print_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i64 }
%struct.line_map = type { i32 }

@line_table = common dso_local global i32 0, align 4
@print = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @maybe_print_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @maybe_print_line(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.line_map*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.line_map* @linemap_lookup(i32* @line_table, i32 %5)
  store %struct.line_map* %6, %struct.line_map** %3, align 8
  %7 = load %struct.line_map*, %struct.line_map** %3, align 8
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @SOURCE_LINE(%struct.line_map* %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 2), align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 1), align 4
  %14 = call i32 @putc(i8 signext 10, i32 %13)
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 0), align 8
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 2), align 8
  br label %17

17:                                               ; preds = %12, %1
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 0), align 8
  %20 = icmp sge i32 %18, %19
  br i1 %20, label %21, label %37

21:                                               ; preds = %17
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 0), align 8
  %24 = add nsw i32 %23, 8
  %25 = icmp slt i32 %22, %24
  br i1 %25, label %26, label %37

26:                                               ; preds = %21
  br label %27

27:                                               ; preds = %31, %26
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 0), align 8
  %30 = icmp sgt i32 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %27
  %32 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 1), align 4
  %33 = call i32 @putc(i8 signext 10, i32 %32)
  %34 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 0), align 8
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @print, i32 0, i32 0), align 8
  br label %27

36:                                               ; preds = %27
  br label %40

37:                                               ; preds = %21, %17
  %38 = load i32, i32* %2, align 4
  %39 = call i32 @print_line(i32 %38, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  br label %40

40:                                               ; preds = %37, %36
  ret void
}

declare dso_local %struct.line_map* @linemap_lookup(i32*, i32) #1

declare dso_local i32 @SOURCE_LINE(%struct.line_map*, i32) #1

declare dso_local i32 @putc(i8 signext, i32) #1

declare dso_local i32 @print_line(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
